--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,19 @@
   color: white;
 }
 
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
+.blue {
+  color: blue;
+}
+
+.yellow {
+  color: yellow;
+}
+
